shortVideoApiService 验证码、注册、登录功能调通 (#33)
## Link to an issue

<!-- Please add an issue link if this PR is related with one. -->

## What

<!-- Please describe what this PR does in simple words. -->

这个PR可能比较杂，修改地方涉及多个项目，原因在于懒得新开其他分支，希望尽量调通

这个PR的内容包括：

### gopkgs

1. 增加consulx
2. 使用consul替换etcd作为服务发现组件，consul自带ui，且很多api gateway组件对consul的支持更好
3.
强化errorx，可以注册错误码和错误信息到全局map。通过`errorx.New`可以定义一个包含code和msg字段的error，并由HttpResponeWrapper增加到返回体中
4. 增加defaultlogger，随launcher自动启动，可以自定义logger传给launcher
5. 增加defaultmiddleware，用于增加trace id等字段（暂未整个链路调通）
6.
增加middleware：HttpResponeWrapper，可以自动为返回体增加code和msg字段，后续开发只需要关注每个接口的具体返回即可。
7.
launcher：做了一些增强，替换使用consulx自动注册服务到consul，项目开发过程不需关注；自定义配置文件类型等。在这个PR中，launcher已经在baseService和shortVideoApiService中应用，并能提供预期的http/grpc服务

### baseService

1. 接入launcher
2. 使用gopkgs/components加载mysql redis等组件
3. fix：验证码存储Redis时间不正确

### shortVideoApiService

1. 接入launcher
2. 链路调通：获取验证码、注册account，登录account

### 部署

1. docker环境中增加consul
2.
使用docker启动baseService和shortVideoApiService（需手动build，目录下存在Dockerfile和Makefile）

### TODO

#### shortVideoApiService

增加/调通接口：

- 获取用户信息
- 更新用户信息
- 预注册上传视频连接
- 确认上传完成
- 获取视频信息
- 列出用户发布视频列表
- 刷视频

#### shortVideoCoreService

增加接口：

- 初始化用户信息；用于在注册account后，无法获取到用户信息的情况下使用
- 创建视频信息（视频表新增is_uploaded字段，上传完成后置为true，视频才能被检索到）
- 确认视频上传完成（is_uploaded置为true）

## How

<!-- Please describe how you have implemented the changes. -->

## Screenshots

<!-- Please add screenshots if we need. -->

## How to test

<!-- Please describe how to test the changes you have made. -->

## Checklist

- [ ] Link to an issue if it really related.
- [ ] At least describe what this PR does.
- [ ] Use `rebase` to confirm that current branch doesn't conflict with
main branch.
- [ ] Unit tests. At least do not reduce the unit test coverage.
- [ ] Checked and updated `guidelines.md` which used to describe how to
build, deploy and use DouTok.

Co-authored-by: TremblingV5 <z

--- a/backend/baseService/configs/config.yaml
+++ b/backend/baseService/configs/config.yaml
@@ -1,17 +1,39 @@
+app:
+  name: base-service
+  version: 0.0.1-test
+
 server:
   grpc:
     addr: 0.0.0.0:8888
 
-data:
-  database:
-    source: root:root@tcp(localhost:3306)/doutok?parseTime=true
+components:
+  mysql:
+    default:
+      host: localhost
+      port: 3306
+      db_name: doutok
+      user: root
+      password: root
   redis:
-    source: localhost:6379
-    password: root
+    default:
+      dsn: localhost:6379
+      password: root
+  etcd:
+    default:
+      host: localhost
+      port: 2379
   minio:
-    endpoint: localhost:9000
-    accessKey: root
-    secretKey: rootroot
+    default:
+      host: localhost
+      port: 9000
+      console_port: 9001
+      access_key: root
+      secret_key: rootroot
+  consul:
+    default:
+      address: localhost:8500
+
+data:
   db_sharding_config:
     file_shortvideo_short_video:
       sharding: file_shortvideo_short_video
