--- a/env/mysql/my.cnf
+++ b/env/mysql/my.cnf
@@ -7,7 +7,7 @@ secure-file-priv=NULL # mysql 8 新增这行配置
 default-authentication-plugin=mysql_native_password  # mysql 8 新增这行配置
 
 port            = 3306 # 端口与docker-compose里映射端口保持一致
-#bind-address= localhost #一定要注释掉，mysql所在容器和django所在容器不同IP
+bind-address    = 0.0.0.0
 
 basedir         = /usr
 datadir         = /var/lib/mysql
