gopkgs: rocket mq支持 (#35)
## Link to an issue

<!-- Please add an issue link if this PR is related with one. -->

## What

<!-- Please describe what this PR does in simple words. -->

1. rocket mq已调通
2. 完善一丢丢文档

## How

<!-- Please describe how you have implemented the changes. -->

## Screenshots

<!-- Please add screenshots if we need. -->

## How to test

<!-- Please describe how to test the changes you have made. -->

## Checklist

- [ ] Link to an issue if it really related.
- [ ] At least describe what this PR does.
- [ ] Use `rebase` to confirm that current branch doesn't conflict with
main branch.
- [ ] Unit tests. At least do not reduce the unit test coverage.
- [ ] Checked and updated `guidelines.md` which used to describe how to
build, deploy and use DouTok.

---------

Co-authored-by: TremblingV5 <zf.xin@qq.com>

--- a/backend/gopkgs/launcher/example/configs/config.yaml
+++ b/backend/gopkgs/launcher/example/configs/config.yaml
@@ -25,3 +25,13 @@ components:
       console_port: 9001
       access_key: root
       secret_key: rootroot
+  consul:
+    default:
+      address: localhost:8500
+  rmqconsumer:
+    default:
+      name_server: 127.0.0.1:9876
+      consumer_group: test-group
+  rmqproducer:
+    default:
+      name_server: 127.0.0.1:9876
