--- a/backend/shortVideoApiService/Dockerfile
+++ b/backend/shortVideoApiService/Dockerfile
@@ -14,6 +14,24 @@ RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags "-X google.golang.org/protobuf/reflect/protoregistry.conflictPolicy=warn" -a -o serve ./cmd/
 
+FROM golang:1.22-alpine as promtail-builder
+
+WORKDIR /build
+
+ARG proxy=https://proxy.golang.org
+ENV proxy=$proxy
+RUN echo "proxy: $proxy"
+
+ENV GOPROXY ${proxy}
+
+RUN wget https://github.com/grafana/loki/archive/refs/tags/v3.1.1.zip
+RUN unzip v3.1.1.zip
+
+WORKDIR /build/loki-3.1.1
+
+RUN go mod download
+RUN CGO_ENABLED=0 go build ./clients/cmd/promtail
+
 FROM alpine:3.16 AS runner
 
 WORKDIR /app
@@ -24,5 +42,9 @@ RUN mkdir configs
 
 COPY --from=builder /build/serve /app/serve
 COPY ./configs /app/configs
+COPY ./entrypoint.sh /app/entrypoint.sh
+COPY ./promtail.yaml /app/promtail.yaml
 
-ENTRYPOINT ["/app/serve"]
+COPY --from=promtail-builder /build/loki-3.1.1/promtail /app/promtail
+
+ENTRYPOINT ["./entrypoint.sh"]
